crates/zm-socket/tests/snapshots/rpc_roundtrip__context_exited_notification.snap
---
source: crates/zm-socket/tests/rpc_roundtrip.rs
assertion_line: 196
expression: n
---
{
  "jsonrpc": "2.0",
  "method": "context_exited",
  "params": {
    "context_id": "ctx-2",
    "exit_code": 0
  }
}
