crates/zm-socket/tests/snapshots/rpc_roundtrip__initialize_request.snap
---
source: crates/zm-socket/tests/rpc_roundtrip.rs
assertion_line: 29
expression: req
---
{
  "jsonrpc": "2.0",
  "id": 1,
  "method": "initialize",
  "params": {
    "protocol_version": "1.0"
  }
}
