crates/zm-socket/tests/snapshots/rpc_roundtrip__list_request.snap
---
source: crates/zm-socket/tests/rpc_roundtrip.rs
assertion_line: 161
expression: req
---
{
  "jsonrpc": "2.0",
  "id": 6,
  "method": "list",
  "params": {}
}
