crates/zm-socket/tests/snapshots/rpc_roundtrip__list_response_success.snap
---
source: crates/zm-socket/tests/rpc_roundtrip.rs
assertion_line: 184
expression: resp
---
{
  "jsonrpc": "2.0",
  "id": 6,
  "result": {
    "contexts": [
      {
        "id": "ctx-main",
        "name": "main",
        "status": "running"
      },
      {
        "id": "ctx-2",
        "name": "reviewer-1",
        "status": "exited"
      }
    ]
  }
}
