crates/zm-socket/tests/snapshots/rpc_roundtrip__response_error_invalid_params.snap
---
source: crates/zm-socket/tests/rpc_roundtrip.rs
assertion_line: 207
expression: resp
---
{
  "jsonrpc": "2.0",
  "id": 2,
  "error": {
    "code": -32602,
    "message": "missing argv"
  }
}
