crates/zm-socket/tests/snapshots/rpc_roundtrip__spawn_agent_request_minimal.snap
---
source: crates/zm-socket/tests/rpc_roundtrip.rs
assertion_line: 77
expression: req
---
{
  "jsonrpc": "2.0",
  "id": "req-spawn-min",
  "method": "spawn_agent",
  "params": {
    "argv": [
      "claude"
    ],
    "env": {}
  }
}
